assets/css/styles.css
/* Variables */
:root {
    --dark_main: #05668d;
    --light_main: #ceeaf7;
    --light_accent: #b49594;
    --dark_accent: #4a051c;
    --highlight: #8f6593;

}

/* Global */
* {
    font-family: Arial, Helvetica, sans-serif;
}

/* Elements */
a {
    text-decoration: none;
    color: inherit;
}


h1 {
    font-size: 2.2rem;
}

h2 {
    font-size: 2.2rem;
    text-align: right;
}

h3 {
    margin: 5px;
}

header {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    padding: 10px 50px 10px 0;
    align-items: center;
    background-color: var(--dark_main);
}

header h1 {
    padding: 20px 20px 20px 75px;
    background-color: var(--light_main);
    color: var(--dark_main);
}

nav ul li {
    color: var(--light_main);
    display: inline;
    margin: 15px;
    font-size: 1rem;
    font-weight: bold;
    background: linear-gradient(to bottom,
            var(--light_main) 0%,
            var(--light_main) 100%);
    background-position: 0 100%;
    background-repeat: repeat-x;
    background-size: 4px 4px;
    padding: 5px;
    transition: all .3s;
}

nav ul li a,
.section_content ul li a {
    color: inherit;
}

nav ul li:hover {
    background-size: 4px 50px;
    color: var(--dark_main);
}

p {
    margin: 10px;
}



/* Classes */
.constell_bg {
    background-image: url(../images/constellation\ background.jpg);
    background-size: cover;
    background-repeat: no-repeat;
}

.git_bg {
    background-image: url(../images/tech\ background\ image.jpg);
    background-size: cover;
    background-repeat: no-repeat;
}

.tds_bg {
    background-image: url(../images/foodie_bg.jpg);
    background-size: cover;
    background-repeat: no-repeat;
}

.musing_bg {
    background-image: url(../images/musing_bg.jpg);
    background-size: cover;
    background-repeat: no-repeat;
}

.hoa_bg {
    background-image: url(../images/hoa_bg.jpg);
    background-size: cover;
    background-repeat: no-repeat;
}

.hero {
    display: flex;
    flex-direction: row;
    justify-content: flex-end;
    align-items: center;
    height: 100px;
    background-color: var(--light_main);
    padding: 20px 30px 30px 30px;
}

.hero p {
    background-color: var(--dark_main);
    color: var(--light_main);
    padding: 10px;
    font-size: 1.7em;
    margin: 0;
}

.hero p:nth-child(2) {
    align-self: flex-end;
    margin: 0 45px 0 0;
}


.project {
    display: flex;
    justify-content: flex-start;
    align-items: flex-end;
    width: 47%;
    background-color: var(--dark_main);
    height: 200px;
    margin: 10px 0;
    border: 5px solid var(--light_main);
    opacity: .8;
    transition: all .3s;
}

.project_title {
    margin-bottom: 25px;
    padding: 5px;
    position: relative;
    left: -1px;
    background-color: var(--light_main);
}

.project_title p {
    margin: 5px;
    font-size: .7rem;
}

.section_content {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    flex-wrap: wrap;
    width: 70%;
    color: var(--dark_main);
    align-items: center;
}

.section_content ul {
    width: 100%;
    display: flex;
    justify-content: space-around;
    align-items: baseline;
    margin: 0;
}

.section_content ul li {
    color: var(--dark_main);
    display: inline;
    margin: 0 15px;
    font-size: 1rem;
    font-weight: bold;
    background: linear-gradient(to bottom,
            var(--dark_main) 0%,
            var(--dark_main) 100%);
    background-position: 0 100%;
    background-repeat: repeat-x;
    background-size: 4px 4px;
    padding: 5px;
    transition: all .3s;
}

.section_content ul li:hover {
    color: var(--light_main);
    background-size: 4px 50px;
}

.section_title {
    width: 25%;
    border-right: 5px solid var(--dark_main);
    color: var(--dark_main);
    padding-right: 10px;
}

.topic {
    margin: 20px 25px;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
}

.project:hover {
    opacity: 1;
}

/* IDs */

#work .topic article.section_content a:first-child {
    width: 100%;
    height: 400px;
}

/* main:last-child section .section_content {
    display: flex;
    flex-direction: row;
    justify-content: center;
} */


/* Media Queries */
@media screen and (max-width: 768px){
    header {
        flex-direction:column;
        align-items: center;
        justify-content:space-around;
        padding:0 0 10px 0;
    }
    header h1 {
        width:100%;
        padding:20px;
        text-align:center;
        margin-bottom: 10px;
    }
    .project {
        width:100%;
    }
    
}

@media screen and (max-width: 992px) {

}

